# QiQi

./: .gitignore  Pipfile  README.md  brains.py  brains_joblib.py  list.json  progress.json  pyproject.toml
test/: 1.xhtml  test.html
