[tool.poetry]
name = "QiQi"
version = "0.1.0"
description = "Wuxiaworld.co scraper"
authors = ["Mycsina <andremacardoso@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
bs4 = "ebooklib"
matplotlib = "requests"
requests = "^2.25.1"
EbookLib = "^0.17.1"


[tool.poetry.dev-dependencies]
black = "^20.8b1"
flake8 = "^3.8.4"
flake8-import-order = "^0.18.1"
flake8-bugbear = "^20.11.1"
flake8-comprehensions = "^3.3.1"
flake8-functions = "^0.0.5"
flake8-return = "^1.1.2"
flake8-strings = "^0.1.1"
flake8-blind-except = "^0.2.0"
flake8-builtins = "^1.5.3"
flake8-logging-format = "^0.6.0"
flake8-docstrings = "^1.5.0"
flake8-rst-docstrings = "^0.0.14"
mccabe = "^0.6.1"
pycodestyle = "^2.6.0"
pydocstyle = "^5.1.1"
pyflakes = "^2.2.0"
restructuredtext-lint = "^1.3.2"
entrypoints = "^0.3"
docutils = "^0.16"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
